sumo/tests/traci/get_variable/MeMeDetector/errors/UnknownAD/testclient.prog
simstep2 48
getvariable 0xa1 0x10 xxx
simstep2 49
